# mMpro3

./: .gitignore  .vercelignore  AUTOMATION_GUIDE.md  BUILD_MODES.md  BUILD_NOTES.md  DEPLOYMENT.md  build-and-sign.sh  entitlements.mac.plist  forge.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.renderer.config.mjs  vite.web.config.mjs
audio-engine/: Cargo.toml
audio-engine/src/: audio_io.rs  compressor.rs  delay.rs  equalizer.rs  file_player.rs  gate.rs  limiter.rs  main.rs  main.rs.backup  reverb.rs  routing.rs  signal_gen.rs  track.rs
landing-page/: README.md  index.html
src/: App.vue  env.d.ts  index.css  index.vue  main.ts  preload.ts
src/components/: AudioFlowModal.vue  AudioOutputModal.vue  AudioTrack.vue  CompressorEffect.vue  DelayEffect.vue  Fader.vue  HeadphonesControl.vue  LimiterEffect.vue  MasterEQDisplay.vue  MasterFX.vue  MasterFader.vue  MasterSection.vue  ParametricEQModal.vue  ReverbEffect.vue  SignalTrack.vue  SpectrumMeter.vue  SubgroupsSection.vue  TrackCompressor.vue  TrackFader.vue  TrackMeter.vue  TrackReverb.vue  VuMeter.vue
src/components/audioTrack/: AudioInputModal.vue  AuxSendControl.vue  BPMDisplay.vue  EQThumbnail.vue  FadeOutButton.vue  HPFButton.vue  InputSelector.vue  PadButton.vue  PanKnob.vue  PhaseCorrelationMeter.vue  PhaseCorrelationModal.vue  TrackAuxSends.vue  TrackCompressor.vue  TrackDelay.vue  (+7 more)
src/composables/: useAudioDevices.ts  useAudioEngine.ts  useAudioFileStorage.ts  useAutomation.ts  usePlaylist.ts  useScenes.ts
src/config/: buildLimits.ts
(+60 files in other folders)
